Configuration changed, added README.md, added some unit and integration tests

--- a/service-products/src/main/resources/messages.properties
+++ b/service-products/src/main/resources/messages.properties
@@ -17,6 +17,7 @@ validation.product.balance.positive_or_zero = Balance parameter should be 0 or g
 # Categories
 validation.category.name.required = Name parameter required
 validation.category.name.length = Name parameter length should be in range {min}-{max}
+validation.category.icon.required = Icon parameter required
 validation.category.icon.length = Icon parameter length should be in range {min}-{max}
 # Search
 validation.search.query.required = Query parameter required
